Background portal: avoid crash when allowing app to run in background

We need to return as soon as possible from the notification callback, otherwise it can
happen that the notification is closed and deleted while we block the callback with
a message dialog.

BUG:438954